tests/statics/statics.exp
Error ----------------------------------------------------- class_statics.js:6:3

Cannot assign function to `C.g` because property `g` is missing in statics of
`C`.

Error: class_statics.js:6
  6: C.g = function(x:string) { C.f(x); };
       ^ Cannot assign function to `C.g` because property `g` is missing in statics of `C` [1].
  References:
    1: class C {
             ^ [1]: statics of `C`

Error ---------------------------------------------------- class_statics.js:6:32

Cannot call `C.f` with `x` bound to `x` because string is incompatible with
number.

Error: class_statics.js:6
  6: C.g = function(x:string) { C.f(x); };
                                    ^ Cannot call `C.f` with `x` bound to `x` because string [1] is incompatible with number [2].
  References:
    6: C.g = function(x:string) { C.f(x); };
                        ^^^^^^ [1]: string
    2:   static f(x:number) { }
                    ^^^^^^ [2]: number

Error ----------------------------------------------------- class_statics.js:7:5

Cannot call `C.g` with `0` bound to `x` because number is incompatible with
string.

Error: class_statics.js:7
  7: C.g(0);
         ^ Cannot call `C.g` with `0` bound to `x` because number [1] is incompatible with string [2].
  References:
    7: C.g(0);
           ^ [1]: number
    6: C.g = function(x:string) { C.f(x); };
                        ^^^^^^ [2]: string

Error ---------------------------------------------------- class_statics.js:9:16

Cannot assign `C.x` to `x` because string is incompatible with number.

Error: class_statics.js:9
  9: var x:number = C.x;
                    ^^^ Cannot assign `C.x` to `x` because string [1] is incompatible with number [2].
  References:
    3:   static x:string;
                  ^^^^^^ [1]: string
    9: var x:number = C.x;
             ^^^^^^ [2]: number

Error ---------------------------------------------------- class_statics.js:10:7

Cannot assign `0` to `C.x` because number is incompatible with string.

Error: class_statics.js:10
 10: C.x = 0;
           ^ Cannot assign `0` to `C.x` because number [1] is incompatible with string [2].
  References:
   10: C.x = 0;
             ^ [1]: number
    3:   static x:string;
                  ^^^^^^ [2]: string

Error ------------------------------------------------------- funstatics.js:5:16

Cannot assign `new C().f()` to `x` because number is incompatible with string.

Error: funstatics.js:5
  5: var x:string = new C().f();
                    ^^^^^^^^^^^ Cannot assign `new C().f()` to `x` because number [1] is incompatible with string [2].
  References:
    2: C.prototype.f = function() { return C.g(0); }
                                               ^ [1]: number
    5: var x:string = new C().f();
             ^^^^^^ [2]: string


Found 6 errors
